# win_pdip

./: CMakeLists.txt  COPYING  ChangeLog.txt  CodeCoverage.cmake  FindGZIP.cmake  FindIsys.cmake  FindPdip.cmake  FindRsys.cmake  GetUserID.bat  IsAdmin.bat  README.md  README.txt  config.h.cmake  linux_only_components.txt  pdip.c  pdip.h  pdip_chown.cmake  pdip_cpu_en.3  pdip_cpu_fr.3  pdip_cpu_isset.3  pdip_deb.ctrl  pdip_deb.postinst  pdip_en.1  pdip_en.3  pdip_exec.3  pdip_fr.1  pdip_fr.3  pdip_install.sh  pdip_lib.c  pdip_p.h  pdip_util.c  pdip_util.h  version.cmake
doc/: coverage.txt  figures.odp  index.html  regression.txt  state_diagram.odp  system_optimization.html  system_optimization.odt
isys/: CMakeLists.txt  isys.c  isys.h  isys_deb.ctrl  isys_deb.postinst  isys_en.3  isys_lib_initialize.3
platform/: CMakeLists.txt  plat_types.h  ptypes.h
rsys/: CMakeLists.txt  rsys.h  rsys_deb.ctrl  rsys_deb.postinst  rsys_en.3  rsys_msg.c  rsys_p.h  rsystem.3  rsystem.c  rsystemd.c  rsystemd_en.8
test/: CMakeLists.txt  check_all.c  check_all.h  check_isys.c  check_isys.h  check_isys_api.c  check_isys_api_env.c  check_isys_errcodes.c  check_pdip.c  check_pdip.h  check_pdip_api.c  check_pdip_errcodes.c  check_rsys.c  check_rsys.h  check_rsys_api.c  check_rsys_errcodes.c  check_rsys_rsystemd.c  check_rsys_util.c  man_exe_1.c  man_exe_2.c  man_exe_3.c  myaffinity.c  pdata.c  pterm.c  tisys.c  tpdip.c  trsys.c
